--- a/index.html
+++ b/index.html
@@ -6,5 +6,68 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Sign-Up</title>
   </head>
-  <body></body>
+  <body>
+    <div class="page-layout">
+      <div class="banner">
+        <img
+          src="./images/halie-west-25xggax4bSA-unsplash.jpg"
+          alt="Green & dense fern leaves"
+        />
+        <div class="image-logo">
+          <img
+            src="./images/odin_logo_design_4x-removebg-preview.png"
+            alt="Odin's face logo"
+          />
+        </div>
+        <caption>
+          Photo by
+          <a href="https://unsplash.com/@haliewestphoto">Halie West</a>
+          on
+          <a href="https://unsplash.com">Unsplash</a>
+        </caption>
+      </div>
+      <form action="" method="post">
+        <h2>
+          This is not a real online service! You know you need something like
+          this in your life to help you realize your deepest dreams. Sign up now
+          to get started
+        </h2>
+        <h2>You <i>know</i> you want to</h2>
+        <div class="user-input">
+          <h2></h2>
+          <div class="form-input">
+            <label for="first-name">First Name</label
+            ><input type="text" id="first-name" name="first-name" />
+          </div>
+          <div class="form-input">
+            <label for="last-name">Last Name</label
+            ><input type="text" id="last-name" name="last-name" />
+          </div>
+          <div class="form-input">
+            <lable for="email">Email</lable>
+            <input type="email" id="email" name="email" />
+          </div>
+          <div class="form-input">
+            <label for="phone-number">Phone Number</label
+            ><input
+              type="number"
+              id="phone-number"
+              name="phone-number"
+              placeholder="07123456789"
+            />
+          </div>
+          <div class="form-input">
+            <label for="password-1">Password</label
+            ><input type="password" id="password-1" name="password" />
+          </div>
+          <div class="form-input">
+            <label for="password-2">Confirm Password</label
+            ><input type="password" id="password-2" name="password-2" />
+          </div>
+        </div>
+        <button>Create Account</button>
+        <p>Alreaady have an account? <a href="">Log in</a></p>
+      </form>
+    </div>
+  </body>
 </html>
